[G500600-10] Fixing misaligned component for 42->11, Lan Status into Sys Diagnostics

--- a/src/components/StatusTable/StatusTable.module.scss
+++ b/src/components/StatusTable/StatusTable.module.scss
@@ -54,6 +54,20 @@
   }
 }
 
+.HeaderLanStatus {
+  th {
+    border-right: 0.1vh solid var(--white);
+    color: var(--aqua);
+    height: var(--spacing-3);
+  }
+
+  th:first-of-type {
+    padding-left: var(--spacing-2);
+    text-align: left;
+    width: 70%;
+  }
+}
+
 .SubHeader {
   th {
     border-right: 0.1vh solid var(--white);
